1. Security integration 2. Account, Admin, User endpoint implementation 3. Swagger integration 4. Integration test case implementations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port = 8080
 server.servlet.context-path=/banking-repository
+springdoc.packages-to-scan=com.poc.banking
+
+app.security.jwt.keystore-location=keys/keystore.jks
+app.security.jwt.keystore-password=password
+app.security.jwt.key-alias=jwtsigning
+app.security.jwt.private-key-passphrase=password
